# cpp-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt
app/src/: app.cpp
cmake/: update_submodules.cmake
core/: CMakeLists.txt
core/include/arithmetic/: add.h  div.h  mul.h  sub.h
core/include/printer/: print.h
core/src/arithmetic/: add.cpp  div.cpp  mul.cpp  sub.cpp
core/src/printer/: print.cpp
tests/: CMakeLists.txt
tests/src/arithmetic-test/: add_test.cpp
